@startuml gof_chain_of_responsibility

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Behavioral #01 - Chain of Responsibility

interface Handler {
    +handle_request()
}

class ConcreteHandler1 {
    +handle_request()
}

class ConcreteHandler2 {
    +handle_request()
}

Handler --> Handler : successor
Handler <|.. ConcreteHandler1
Handler <|.. ConcreteHandler2

@enduml